# docs/swagger/swagger.yaml
@@ -1102,10 +1102,10 @@ definitions:
         type: string
       public_name:
         type: string
+      quality_level:
+        type: string
       quantity:
         type: integer
-      shine_level:
-        type: string
     type: object
 host: localhost:8080
 info:
