# internal/database/generated/models.go
@@ -425,7 +425,7 @@ type UserTrap struct {
 	ID             uuid.UUID          `json:"id"`
 	SetterID       uuid.UUID          `json:"setter_id"`
 	TargetID       uuid.UUID          `json:"target_id"`
-	ShineLevel     string             `json:"shine_level"`
+	QualityLevel   string             `json:"quality_level"`
 	TimeoutSeconds int32              `json:"timeout_seconds"`
 	PlacedAt       pgtype.Timestamptz `json:"placed_at"`
 	TriggeredAt    pgtype.Timestamptz `json:"triggered_at"`
